--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,11 @@
 }
 
 .App section {
-  margin-left: 5%;
-  margin-right: 5%;
+  padding-left: 5%;
+  padding-right: 5%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
 }
 
 .App-nav ul,
