--- a/src/dictionary/editor/List.css
+++ b/src/dictionary/editor/List.css
@@ -1,10 +1,13 @@
-.WordForm li {
-  display: block;
+.List {
+  list-style-type: none;
+}
+
+.List__item {
   margin-bottom: 0.5em;
   padding-top: 1em;
   padding-bottom: 1em;
 }
 
-.WordForm li + li {
+.List__item + .List__item {
   border-top: 1px silver solid;
 }
