--- a/src/fragmentarium/Details.css
+++ b/src/fragmentarium/Details.css
@@ -3,23 +3,25 @@
   padding: 0;
 }
 
-.Details-item {
+.Details__item {
   margin-bottom: 0.2em;
 }
+
+.Details__item--extra-margin {
+  margin-bottom: 1em;
+}
+
 
 .Details-joins {
   display: inline;
   padding: 0;
 }
 
-.Details-joins_join {
+.Details-joins__join {
   display: inline;
 }
 
-.Details-joins_join + .Details-joins_join::before {
+.Details-joins__join + .Details-joins__join::before {
   content: ", ";
 }
 
-.Details-item_measures {
-  margin-bottom: 1em;
-}
