--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .App-header {
-  text-align: center;
   background-color: white;
-  padding: 20px;
-  color: black;
   border-bottom: 1px solid black;
+  color: black;
+  padding: 20px;
+  text-align: center;
 }
 
 .App-header__logo {
@@ -17,15 +17,15 @@
 .App-header__nav,
 .App-header__nav-item {
   display: inline;
-  margin: 0.5em;
+  padding: 0.5em;
 }
 
 
 .App-content {
-  padding-left: 5%;
-  padding-right: 5%;
   margin-left: auto;
   margin-right: auto;
   max-width: 1200px;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
