--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,16 @@
   background-color: white;
   border-bottom: 1px solid black;
   color: black;
-  padding: 20px;
+  padding: 1.5em;
   text-align: center;
 }
 
+.App-header__title {
+  height: 4em;
+}
+
 .App-header__logo {
-  height: 80px;
+  height: 100%;
 }
 
 .App-header__title {
@@ -25,8 +29,8 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 1200px;
-  padding-left: 5%;
-  padding-right: 5%;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
 }
 
 .App-content--wide {
