--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,3 @@
-.App-header {
-  background-color: white;
-  border-bottom: 1px solid black;
-  color: black;
-  padding: 1.5em;
-  text-align: center;
-}
-
-.App-header__title {
-  height: 4em;
-}
-
-.App-header__logo {
-  height: 100%;
-}
-
-.App-header__title {
-  font-size: 1.5em;
-}
-
-.App-header__nav,
-.App-header__nav-item {
-  display: inline;
-  padding: 0.5em;
-}
-
-
 .App-content {
   margin-left: auto;
   margin-right: auto;
@@ -35,5 +8,6 @@
 
 .App-content--wide {
   max-width: initial;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
 }
-
