--- a/src/Header.css
+++ b/src/Header.css
@@ -7,15 +7,24 @@
 }
 
 .Header__title {
-  height: 4em;
+  font-size: 2.2em;
 }
 
-.Header__logo {
-  height: 100%;
+.Header__title-main {
+  border-right: 0.05em solid black;
+  display: inline-block;
+  margin-right: 0.5em;
+  padding-right: 0.5em;
+  text-align: right;
 }
 
-.Header__title {
-  font-size: 2em;
+.Header__title-abbreviation {
+  color: white;
+  font-size: 4em;
+  text-shadow: -1px -2px 0 black,
+    2px -2px 0 black,
+    -2px 2px 0 black,
+    2px 2px 0 black;
 }
 
 .Header__nav,
