Use font-display swap for Junicode

--- a/src/index.css
+++ b/src/index.css
@@ -6,17 +6,20 @@ body {
 }
 
 @font-face{ 
+  font-display: swap;
   font-family: 'Junicode';
   src: url('Junicode.woff') format('woff');
 }
 
 @font-face{ 
+  font-display: swap;
   font-family: 'Junicode';
   font-weight: bold;
   src: url('Junicode-Bold.woff') format('woff');
 }
 
 @font-face{ 
+  font-display: swap;
   font-family: 'Junicode';
   font-style: italic;
   font-weight: bold;
@@ -24,6 +27,7 @@ body {
 }
 
 @font-face{ 
+  font-display: swap;
   font-family: 'Junicode';
   font-style: italic;
   src: url('Junicode-Italic.woff') format('woff');
