Make lemmatization view take two columns

--- a/src/fragmentarium/transliterate/CuneiformFragment.css
+++ b/src/fragmentarium/transliterate/CuneiformFragment.css
@@ -1,11 +1,3 @@
-.CuneifromFragment__description,
-.CuneifromFragment__publication {
-  color: gray;
-  font-size: 80%;
-  text-align: center;
-}
-
-.CuneifromFragment__navigation {
-  margin: 1em;
-  text-align: center;
+.CuneiformFragment__content {
+  padding-top: 1em;
 }
