--- a/src/fragmentarium/lemmatization/Word.css
+++ b/src/fragmentarium/lemmatization/Word.css
@@ -2,9 +2,13 @@
   font-weight: bolder;
 }
 
-.Word--with-lemma .Word__lemma {
-  font-size: 66%;
+.Word--with-lemma .Word__lemmatization {
+  font-size: 75%;
   margin-left: 0.33em;
   vertical-align: sub;
   font-weight: normal;
+}
+
+.Word__lemma {
+  font-style: italic;
 }
