--- a/src/fragmentarium/Fragmentarium.css
+++ b/src/fragmentarium/Fragmentarium.css
@@ -1,12 +1,16 @@
+.Fragmentarium-header {
+  margin-bottom: 1em;
+}
+
 .Fragmentarium-search {
   padding-bottom: 2em;
 }
 
 .Fragmentarium-search__header {
   padding-bottom: 1em;
-  text-align: center;
 }
 
 .Fragmentarium-search__button-bar {
   margin: 1em;
+  padding-left: 6.5em;
 }
