--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,12 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 1200px;
+  padding-bottom: 1em;
   padding-left: 1.5em;
   padding-right: 1.5em;
+
 }
 
 .App-content--wide {
   max-width: initial;
-  padding-left: 1.5em;
-  padding-right: 1.5em;
 }
