Fix statistics styles
Fix:
https://github.com/ElectronicBabylonianLiterature/ebl-frontend/commit/b582bccc36c0cfa2ecaed32835d3bed6df927ae3#r32133745
https://github.com/ElectronicBabylonianLiterature/ebl-frontend/commit/6c41445827bbf2ac6340898b8edea575f83ceadd#r32133782

--- a/src/fragmentarium/search/Statistics.css
+++ b/src/fragmentarium/search/Statistics.css
@@ -1,19 +1,18 @@
-.Wrapper {
+.Statistics {
+  font-size: 1.5em;
   text-align: center;
 }
 
-.Statistics {
-  font-size: 1.5em;
-  margin: auto;
-  text-align: left;
+.Statistics__content {
   display: inline-block;
-
+  text-align: left;
 }
 
-.Statistics__values {
+.Statistics__row {
   margin-top: 1em;
+  padding-left: 2em;
 }
 
-.Statistics_value {
+.Statistics__value {
   font-weight: bold;
 }
