--- a/src/fragmentarium/search/TransliterationSearch.css
+++ b/src/fragmentarium/search/TransliterationSearch.css
@@ -7,3 +7,7 @@
 .TransliterationSearch__list_item + .TransliterationSearch__list_item {
   margin-top: 0.5em;
 }
+
+.TransliterationSearchForm__label {
+  text-align: right;
+}
