Tweak header styling

--- a/src/Header.css
+++ b/src/Header.css
@@ -2,7 +2,7 @@
   background-color: white;
   border-bottom: 1px solid black;
   color: black;
-  text-align: center;
+  margin-bottom: 0.4em;
 }
 
 .Header__title {
