--- a/src/fragmentarium/Fragmentarium.css
+++ b/src/fragmentarium/Fragmentarium.css
@@ -1,7 +1,3 @@
-.Fragmentarium h3 {
-  padding-left: 2em;
-}
-
 .Fragmentarium-header {
   margin-bottom: 1em;
 }
@@ -16,5 +12,6 @@
   padding-bottom: 1em;
 }
 
-
-
+.SubsectionHeading--indented {
+  padding-left: 2em;
+}
