--- a/src/fragmentarium/view/Photo.css
+++ b/src/fragmentarium/view/Photo.css
@@ -1,6 +1,9 @@
 .Photo__copyright {
-  color: gray;
-  font-size: 0.9em;
   margin-top: 1em;
   text-align: center;
+}
+
+.Photo__copyright small {
+  color: gray;
+  font-size: 0.9em;
 }
