--- a/src/fragmentarium/ui/display/Display.css
+++ b/src/fragmentarium/ui/display/Display.css
@@ -7,7 +7,11 @@
   color: darkgrey
 }
 
-.Display__token.Display__token--Reading {
+.Display__token.Display__token--Reading,
+.Display__token.Display__token--Number,
+.Display__token.Display__token--UnidentifiedSign,
+.Display__token.Display__token--CompoundGrapheme,
+.Display__token.Display__token--Joiner {
   font-style: italic;
 }
 
