--- a/src/fragmentarium/ui/display/Display.css
+++ b/src/fragmentarium/ui/display/Display.css
@@ -32,7 +32,7 @@
 .Transliteration__Word--SUMERIAN .Transliteration__DocumentOrientedGloss,
 .Transliteration__Word--SUMERIAN .Transliteration__PhoneticGloss,
 .Transliteration__Word--SUMERIAN .Transliteration__LinguisticGloss {
-  font-style: normal;
+  font-style: normal !important;
   font-variant: normal;
   letter-spacing: 0.1em;
 }
@@ -49,7 +49,7 @@
 .Transliteration__Word--EMESAL .Transliteration__DocumentOrientedGloss,
 .Transliteration__Word--EMESAL .Transliteration__PhoneticGloss,
 .Transliteration__Word--EMESAL .Transliteration__LinguisticGloss {
-  font-style: normal;
+  font-style: normal !important;
   font-variant: normal;
   color: pink;
 }
