--- a/src/fragmentarium/ui/display/Display.css
+++ b/src/fragmentarium/ui/display/Display.css
@@ -7,6 +7,19 @@
   color: darkgrey
 }
 
+.Transliteration__Reading,
+.Transliteration__Number,
+.Transliteration__UnidentifiedSign,
+.Transliteration__CompoundGrapheme,
+.Transliteration__Joiner,
+.Transliteration__Divider,
+.Transliteration__DocumentOrientedGloss,
+.Transliteration__PhoneticGloss,
+.Transliteration__LinguisticGloss {
+  font-style: italic;
+  font-variant: normal;
+}
+
 .Transliteration__bracket,
 .Transliteration__flag,
 .Transliteration__subIndex,
@@ -18,6 +31,10 @@
 .Transliteration__Determinative .Transliteration__Joiner {
   font-style: normal;
   font-variant: normal;
+}
+
+.Transliteration__Determinative + .Transliteration__Determinative > sup:before {
+  content: ".";
 }
 
 .Transliteration__wordSeparator--SUMERIAN,
@@ -32,7 +49,7 @@
 .Transliteration__Word--SUMERIAN .Transliteration__DocumentOrientedGloss,
 .Transliteration__Word--SUMERIAN .Transliteration__PhoneticGloss,
 .Transliteration__Word--SUMERIAN .Transliteration__LinguisticGloss {
-  font-style: normal !important;
+  font-style: normal;
   font-variant: normal;
   letter-spacing: 0.1em;
 }
@@ -49,26 +66,9 @@
 .Transliteration__Word--EMESAL .Transliteration__DocumentOrientedGloss,
 .Transliteration__Word--EMESAL .Transliteration__PhoneticGloss,
 .Transliteration__Word--EMESAL .Transliteration__LinguisticGloss {
-  font-style: normal !important;
+  font-style: normal;
   font-variant: normal;
   color: pink;
-}
-
-.Transliteration__Determinative + .Transliteration__Determinative > sup:before {
-  content: ".";
-}
-
-.Transliteration__Reading,
-.Transliteration__Number,
-.Transliteration__UnidentifiedSign,
-.Transliteration__CompoundGrapheme,
-.Transliteration__Joiner,
-.Transliteration__Divider,
-.Transliteration__DocumentOrientedGloss,
-.Transliteration__PhoneticGloss,
-.Transliteration__LinguisticGloss {
-  font-style: italic;
-  font-variant: normal;
 }
 
 .Transliteration__Logogram {
