Format tablution for display

--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -89,3 +89,10 @@
     sup &
       font-size: 1rem
       vertical-align: text-bottom
+
+  &__Tabulation
+    display: inline-block
+    width: 1em
+
+    & + .Transliteration__wordSeparator
+      display: none
