--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -31,6 +31,11 @@
   &__ControlLine
     color: darkgrey
 
+  &__RulingDollarLine
+    text-indent: 1em
+    color: darkgrey
+    border-bottom: 1px solid black
+
   &__Reading,
   &__Number,
   &__UnidentifiedSign,
