center bottom-border

--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -37,16 +37,20 @@
 
   &__RulingDollarLine
     text-indent: 1em
+    margin-top: 1.5px
     color: darkgrey
 
     &.SINGLE
       border-bottom: 1px solid black
+      margin-bottom: 6px
 
     &.DOUBLE
       border-bottom: 4px double black
+      margin-bottom: 9px
 
     &.TRIPLE
       border-bottom: 7px double black
+      margin-bottom: 15px
       @include third-black-border
 
   &__Reading,
