--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -29,11 +29,25 @@
   list-style: none
   padding: 0
 
-  &__RulingDollarLine
-    line-height:
-    color: darkgrey
-    border-top: solid black
-    border-bottom: solid black
+  &__RulingDollarLineSingle
+    margin-top: 0.2em
+    margin-bottom: 0.2em
+    border-top: 2px solid black
+
+  &__RulingDollarLineDouble
+    margin-top: 0.2em
+    margin-bottom: 0.2em
+    padding: 1px
+    border-top: 2px solid black
+    border-bottom: 2px solid black
+
+  &__RulingDollarLineTriple
+    margin-top: 0.2em
+    margin-bottom: 0.2em
+    padding: 1px
+    border-top: 2px solid black
+    border-bottom: 6px double black
+
 
   &__Reading,
   &__Number,
