--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -29,6 +29,10 @@
   list-style: none
   padding: 0
 
+  &__GenericControlLine
+    color: darkgrey
+    text-indent: 1em
+
   &__RulingDollarLineSingle
     margin-top: 0.2em
     margin-bottom: 0.2em
