Simplify ruling styles and fix ValueToken type

--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -32,32 +32,20 @@
   &__ControlLine
     color: darkgrey
 
-  &__RulingDollarLineSingle
-    margin-bottom: 6px
+  &__RulingDollarLine
+    margin-bottom: 0.5em
 
-    &__element
-      margin-top: 2.5px
-      margin-bottom: 2.5px
-      border: 1px solid black
+  &__ruling
+    border-top: 1px solid black
+    height: 1px
+    margin: 0
 
-  &__RulingDollarLineDouble
-    border-bottom: 2px solid black
-    margin-bottom: 6px
+    &--double
+      border-bottom: 1px solid black
 
-    &__element
-      margin-top: 2.5px
-      margin-bottom: 2.5px
-      border: 1px solid black
+    &--triple
+      border-bottom: 3px double black
 
-  &__RulingDollarLineTriple
-    border-top: 2px solid black
-    border-bottom: 2px solid black
-    margin-bottom: 6px
-
-    &__element
-      margin-top: 2.5px
-      margin-bottom: 2.5px
-      border: 1px solid black
 
   &__Reading,
   &__Number,
