--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -29,28 +29,14 @@
   list-style: none
   padding: 0
 
+  &__ControlLine
+    color: darkgrey
+
   &__GenericControlLine
     color: darkgrey
     text-indent: 1em
 
-  &__RulingDollarLineSingle
-    margin-top: 0.2em
-    margin-bottom: 0.2em
-    border-top: 2px solid black
 
-  &__RulingDollarLineDouble
-    margin-top: 0.2em
-    margin-bottom: 0.2em
-    padding: 1px
-    border-top: 2px solid black
-    border-bottom: 2px solid black
-
-  &__RulingDollarLineTriple
-    margin-top: 0.2em
-    margin-bottom: 0.2em
-    padding: 1px
-    border-top: 2px solid black
-    border-bottom: 6px double black
 
 
   &__Reading,
