--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -36,16 +36,16 @@
     margin-bottom: 0.5em
 
   &__ruling
-    border-top: 1px solid black
+    border-top: 2px solid black
     height: 1px
     margin: 0
 
     &--double
-      border-bottom: 1px solid black
-
+      border-bottom: 2px solid black
+      padding: 0.375px
     &--triple
-      border-bottom: 3px double black
-
+      border-bottom: 6px double black
+      padding: 0.75px
 
   &__Reading,
   &__Number,
