--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -14,15 +14,16 @@
       content: "⸣"
 
 @mixin sumerian
-  &--SUMERIAN,
+  &--SUMERIAN
     @include normal-font
     letter-spacing: 0.1em
 
 @mixin emesal
-  &--EMESAL,
+  &--EMESAL
     @include normal-font
     color: pink
     letter-spacing: 0.1em
+
 
 .Transliteration
   list-style: none
@@ -30,6 +31,21 @@
 
   &__ControlLine
     color: darkgrey
+
+  &__RulingDollarLine
+    margin-bottom: 0.5em
+
+  &__ruling
+    border-top: 2px solid black
+    height: 2px
+    margin: 0
+
+    &--double
+      border-bottom: 2px solid black
+
+    &--triple
+      border-bottom: 6px double black
+
 
   &__Reading,
   &__Number,
