put class in createElement

--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -31,7 +31,10 @@
   &__ControlLine
     color: darkgrey
 
-  &__GenericControlLine
+  &__GenericDollarAndAtLine > div
+    color: darkgrey
+    text-indent: 1em
+  &__DollarAndAtLineWithParenthesis > div
     color: darkgrey
     text-indent: 1em
 
