--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -31,10 +31,8 @@
   &__ControlLine
     color: darkgrey
 
-  &__GenericDollarAndAtLine > div
-    color: darkgrey
-    text-indent: 1em
-  &__DollarAndAtLineWithParenthesis > div
+  &__DollarAndAtLine,
+  &__DollarAndAtLineWithParenthesis
     color: darkgrey
     text-indent: 1em
 
