Drop brackets out of determinatives

--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -72,7 +72,7 @@
   &__Determinative
     @include normal-font
 
-    & + & > sup:before
+    & + & > sup:first:before
       content: "."
 
   &__wordSeparator,
