--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -24,13 +24,17 @@
     color: pink
     letter-spacing: 0.1em
 
-
 .Transliteration
   list-style: none
   padding: 0
 
   &__ControlLine
     color: darkgrey
+
+  &__DollarAndAtLine,
+  &__DollarAndAtLineWithParenthesis
+    color: darkgrey
+    text-indent: 1em
 
   &__RulingDollarLine
     margin-bottom: 0.5em
