Pull sign and surrogate brackets out of superscript and fix styles

--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -46,10 +46,7 @@
   &__UnidentifiedSign,
   &__CompoundGrapheme,
   &__Joiner,
-  &__Divider,
-  &__DocumentOrientedGloss,
-  &__PhoneticGloss,
-  &__LinguisticGloss
+  &__Divider
     font-style: italic
     font-variant: normal
 
