pull request change DisplayRulingLine

--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -36,19 +36,12 @@
     color: darkgrey
     text-indent: 1em
 
-  &__RulingDollarLine
-    &--single
-      margin-bottom: 0.2em
-      border-top: thin solid black
-
-    &--double
-      margin-bottom: 0.2em
-      border-top: thin solid black
-
+  &__ruling
+    &--single,
+    &--double,
     &--triple
       margin-bottom: 0.2em
       border-top: thin solid black
-
 
   &__Reading,
   &__Number,
