--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -2,16 +2,6 @@
 @mixin normal-font
   font-style: normal
   font-variant: normal
-  
-@mixin damaged
-  &--damaged
-    &:before
-      @include normal-font
-      content: "⸢"
-
-    &:after
-      @include normal-font
-      content: "⸣"
 
 @mixin sumerian
   &--SUMERIAN
@@ -56,10 +46,7 @@
   &__UnidentifiedSign,
   &__CompoundGrapheme,
   &__Joiner,
-  &__Divider,
-  &__DocumentOrientedGloss,
-  &__PhoneticGloss,
-  &__LinguisticGloss
+  &__Divider
     font-style: italic
     font-variant: normal
 
@@ -73,11 +60,14 @@
   &__subIndex
     @include normal-font
 
+  &__glossJoiner
+    display: none
+
   &__Determinative
     @include normal-font
 
-    & + & > sup:before
-      content: "."
+    & + & .Transliteration__glossJoiner
+      display: inline
 
   &__wordSeparator,
   &__Word,
@@ -96,8 +86,6 @@
   &__Grapheme,
   &__UnidentifiedSign,
   &__UnclearSign
-    @include damaged
-
     &--BROKEN_AWAY
       color: darkgrey
 
@@ -107,10 +95,6 @@
   &__IntentionalOmission,
   &__Removal
     @include normal-font
-
-    sup &
-      font-size: 1rem
-      vertical-align: text-bottom
 
   &__Tabulation
     display: inline-block
