Display emesal in black

--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -11,7 +11,7 @@
 @mixin emesal
   &--EMESAL
     @include normal-font
-    color: pink
+    color: black
     letter-spacing: 0.1em
 
 .Transliteration
