Display numbers and dividers without italics

--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -40,13 +40,14 @@
     &--triple
       border-bottom: 6px double black
 
+  &__Number,
+  &__Divider
+    @include normal-font
 
   &__Reading,
-  &__Number,
   &__UnidentifiedSign,
   &__CompoundGrapheme,
   &__Joiner,
-  &__Divider
     font-style: italic
     font-variant: normal
 
