Display joiners in lacunas as darkgrey

--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -89,7 +89,9 @@
   &__Grapheme,
   &__CompoundGrapheme,
   &__UnidentifiedSign,
-  &__UnclearSign
+  &__UnclearSign,
+  &__Joiner,
+  &__glossJoiner
     &--BROKEN_AWAY
       color: darkgrey
 
