remove duplicate reading

--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -30,14 +30,13 @@
       margin-bottom: 0.2em
       border-top: thin solid black
 
-  &__Reading,
   &__Number,
   &__Divider
     @include normal-font
 
   &__Reading,
   &__UnidentifiedSign,
-  &__Joiner
+  &__Joiner,
     font-style: italic
     font-variant: normal
 
