--- a/src/fragmentarium/ui/display/Display.sass
+++ b/src/fragmentarium/ui/display/Display.sass
@@ -26,19 +26,9 @@
     color: darkgrey
     text-indent: 1em
 
-  &__RulingDollarLine
-    margin-bottom: 0.5em
-
   &__ruling
-    border-top: 2px solid black
-    height: 2px
-    margin: 0
-
-    &--double
-      border-bottom: 2px solid black
-
-    &--triple
-      border-bottom: 6px double black
+      margin-bottom: 0.2em
+      border-top: thin solid black
 
   &__Number,
   &__Divider
