--- a/src/fragmentarium/ui/FragmentList.css
+++ b/src/fragmentarium/ui/FragmentList.css
@@ -1,6 +1,6 @@
 .FragmentList__Description {
   width: 40%;
 }
-.FragmentList__References.Id {
+.FragmentList__References-Id {
   padding-left: 4%;
 }
