Use table to display transliteration lines

--- a/src/transliteration/ui/Transliteration.sass
+++ b/src/transliteration/ui/Transliteration.sass
@@ -26,7 +26,9 @@
       color: black
 
 .Transliteration
-  &__lines,
+  &__lines tr
+    vertical-align: top
+
   &__notes
     list-style: none
     padding: 0
