Add interface and component for line break

--- a/src/transliteration/ui/Transliteration.sass
+++ b/src/transliteration/ui/Transliteration.sass
@@ -46,7 +46,8 @@
       border-top: thin solid black
 
   &__Number,
-  &__Divider
+  &__Divider,
+  &__LiniBreak
     @include normal-font
 
   &__Reading,
