Add display mode for breaks

--- a/src/transliteration/ui/Transliteration.sass
+++ b/src/transliteration/ui/Transliteration.sass
@@ -117,6 +117,12 @@
         &--BROKEN_AWAY
             color: darkgrey
 
+  &__Caesura,
+  &__MetricalFootSeparator
+    @include normal-font
+
+    color: red
+    
   &__BrokenAway,
   &__PerhapsBrokenAway,
   &__AccidentalOmission,
