--- a/src/transliteration/ui/Transliteration.sass
+++ b/src/transliteration/ui/Transliteration.sass
@@ -52,7 +52,8 @@
 
   &__Reading,
   &__UnidentifiedSign,
-  &__Joiner
+  &__Joiner,
+  &__AkkadianWord
     @include commentary-protocols
     
     font-style: italic
@@ -103,17 +104,25 @@
   &__UnidentifiedSign,
   &__UnclearSign,
   &__Joiner,
-  &__glossJoiner
+  &__glossJoiner,
     @include commentary-protocols
 
     &--BROKEN_AWAY
       color: darkgrey
 
+  &__AkkadianWord
+    .Transliteration__ValueToken
+        @include commentary-protocols
+
+        &--BROKEN_AWAY
+            color: darkgrey
+
   &__BrokenAway,
   &__PerhapsBrokenAway,
   &__AccidentalOmission,
   &__IntentionalOmission,
-  &__Removal
+  &__Removal,
+  &__Emendation
     @include normal-font
     @include commentary-protocols
 
