--- a/src/transliteration/ui/Transliteration.sass
+++ b/src/transliteration/ui/Transliteration.sass
@@ -104,7 +104,7 @@
   &__UnidentifiedSign,
   &__UnclearSign,
   &__Joiner,
-  &__glossJoiner,
+  &__glossJoiner
     @include commentary-protocols
 
     &--BROKEN_AWAY
@@ -112,10 +112,10 @@
 
   &__AkkadianWord
     .Transliteration__ValueToken
-        @include commentary-protocols
+      @include commentary-protocols
 
-        &--BROKEN_AWAY
-            color: darkgrey
+      &--BROKEN_AWAY
+        color: darkgrey
 
   &__Caesura,
   &__MetricalFootSeparator
