Add variant field to aligner

--- a/src/corpus/ui/alignment/WordAligner.css
+++ b/src/corpus/ui/alignment/WordAligner.css
@@ -1,8 +1,6 @@
-.WordAligner {
-  position: relative;
-}
-
 .WordAligner__form {
+  margin-left: 0.5em;
+  margin-right: 0.5em;
   max-width: none;
   min-width: 32em;
 }
