Change logogram font variant to all-small-caps
small-caps does not affect capitals anymore.

--- a/src/transliteration/ui/Transliteration.sass
+++ b/src/transliteration/ui/Transliteration.sass
@@ -93,7 +93,7 @@
   &__CompoundGrapheme,
   &__Grapheme
     font-style: normal
-    font-variant: small-caps
+    font-variant: all-small-caps
 
   &__Reading,
   &__Number,
