--- a/src/transliteration/ui/Transliteration.sass
+++ b/src/transliteration/ui/Transliteration.sass
@@ -50,6 +50,11 @@
   &__LiniBreak
     @include normal-font
 
+  &__EgyptianMetricalFeetSeparator
+    &--colored
+      color: red
+
+
   &__Reading,
   &__UnidentifiedSign,
   &__Joiner,
