Update display mode for Greek

--- a/src/transliteration/ui/Transliteration.sass
+++ b/src/transliteration/ui/Transliteration.sass
@@ -109,7 +109,8 @@
   &__UnidentifiedSign,
   &__UnclearSign,
   &__Joiner,
-  &__glossJoiner
+  &__glossJoiner,
+  &__GreekLetter,
     @include commentary-protocols
 
     &--BROKEN_AWAY
@@ -127,7 +128,7 @@
     @include normal-font
 
     color: red
-    
+
   &__BrokenAway,
   &__PerhapsBrokenAway,
   &__AccidentalOmission,
