--- a/src/transliteration/ui/Transliteration.sass
+++ b/src/transliteration/ui/Transliteration.sass
@@ -110,7 +110,7 @@
   &__UnclearSign,
   &__Joiner,
   &__glossJoiner,
-  &__GreekLetter,
+  &__GreekLetter
     @include commentary-protocols
 
     &--BROKEN_AWAY
