--- a/src/dictionary/ui/display/wordInformationDisplay.css
+++ b/src/dictionary/ui/display/wordInformationDisplay.css
@@ -1,6 +1,6 @@
-.linkContainer:hover {
+.pointer__hover:hover {
   cursor: pointer;
 }
-.markdown {
-  margin-bottom: 0 !important;
+.copyIcon {
+  padding: 3px 5px 0 5px;
 }
