--- a/src/signs/ui/search/Signs.css
+++ b/src/signs/ui/search/Signs.css
@@ -2,3 +2,17 @@
   margin: 0 auto 2em auto;
   max-width: 32em;
 }
+
+@font-face {
+  font-family: 'Assurbanipal';
+  src: url('Assurbanipal.woff2') format('woff2'),
+    url('Assurbanipal.woff') format('woff'),
+    url('Assurbanipal.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+.cuneiformFont {
+  font-family: 'Assurbanipal', 'Junicode';
+}
